objects/ZipcodeLst__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <label>Zip code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State-Zip Code</label>
</CustomObject>